--- a/Task1_calculator/index.html
+++ b/Task1_calculator/index.html
@@ -1,1 +1,47 @@
+<!--
+  Author - Aditya Pramod Jadhav
+  OasisInfoByte SIP web Devepolment Intern
+  Level 2 -Task 1
+			Calculator
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Calculate me!</title>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+</head>
 
+<body>
+ 
+  <div class="container">
+		<div id="display"></div>
+
+		<div class="buttons">
+			<div class="button">Clr</div>
+			<div class="button">/</div>
+			<div class="button">*</div>
+			<div class="button">&larr;</div>
+			<div class="button">7</div>
+			<div class="button">8</div>
+			<div class="button">9</div>
+			<div class="button">-</div>
+			<div class="button">4</div>
+			<div class="button">5</div>
+			<div class="button">6</div>
+			<div class="button">+</div>
+			<div class="button">1</div>
+			<div class="button">2</div>
+			<div class="button">3</div>
+			<div class="button">.</div>
+			<div class="button">(</div>
+			<div class="button">0</div>
+			<div class="button">)</div>
+			<div id="equal" class="button">=</div>
+		</div>
+  </div>
+  <script src="script.js"></script>
+</body>
+
+</html>
