--- a/Task3_to do app/index.html
+++ b/Task3_to do app/index.html
@@ -1,1 +1,39 @@
+<!--
+  Author - Aditya Pramod Jadhav
+  Web Development Intern At Oasis Infobyte
+  Level 2 - Task 3
+             To-Do app List
+-->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>To-Do List App</title>
+	<link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+<div class="container">
+	<header>
+		<h1>To-Do List</h1>
+		<form id="task-form">
+			<input type="text" name="task-input"id="task-input" placeholder="What do you want to Add ?" />
+			<input type="submit" id="task-submit" value="Add task" />
+		</form>
+	</header>
+	<main>
+		<section class="task-list">
+			<h2>Tasks</h2>
+			<div id="tasks">
+
+				
+
+			</div>
+		</section>
+	</main>
+</div>
+	<script src="script.js"></script>
+</body>
+</html>
